--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       This project is done by Sai Prachodhan Devulapalli and whole copyRights &#169; belongs to me
       <div>
         For any other information or support please contact us <a style="text-decoration: none;"
-          href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRsnxJgfQNndXcMgccXddKKNtsqkctCrHWSsqRBPPlSCjBKjskJlpbrQfGdrXlqWtBCXJcL">
+          href="#">
           <email class="C">devulapallisaiprachodhan26@gmail.com</email></a>
         </div>
     </div>
