--- a/Note.html
+++ b/Note.html
@@ -16,7 +16,7 @@
 
 <body>
 <!-- This is for your navbar from bootstrapand some manual css linked for insering logo and all -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid" style="font-family: 'Baloo Bhai 2', cursive;">
       <a href="index.html"><img class="logo" src="attachments/download.jpg" alt="Logo Here"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
