Added new and necessary changes

--- a/about.html
+++ b/about.html
@@ -84,6 +84,8 @@
                     adding tone using Machine learning and self-text editor or auto-spell checker and making this
                     project using Full stack web development and using MongoDB/Django/Node.js for it.</li>
                 </ul>
+                <li style="padding: 1vh;">I have also done a extension which includes this website URL in the context menu of the Google pages so that after installing when we create the right click on mouse at chrome page then you can see a InstantNoteTaker option added in the chrome menu which on clicked redirects to the Notes section of our website.</li>
+                </ul>
         </section>
     </div>
     <div class="container Info my-4">
