--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>InstantNotes</title>
+  <link rel="shortcut icon" href="icon16.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -51,10 +52,6 @@
               </ul>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
@@ -160,7 +157,7 @@
       </div>
     </div>
     <div class="End">
-      <p>Do create your own library of notes using our Notes.Don't stop your writing at any event or any time even you don't have notes. Get started with the below button and write your own thoughts and description about events and whatever you want but don't stop your writing at any cost.
+      <p  style="position: relative;left:20vw;right:20vw;width:60vw;">Do create your own library of notes using our Notes.Don't stop your writing at any event or any time even you don't have notes. Get started with the below button and write your own thoughts and description about events and whatever you want but don't stop your writing at any cost.
       </p>
       <button class="lbtn btn-primary"><a href="Note.html">Create Your First Note</a></button>
     </div>
