Added and removed some unnecessary files and links

--- a/Suggest.html
+++ b/Suggest.html
@@ -111,10 +111,10 @@
                 data: $("#myForm").serializeArray(),
                 success: function () {
                     document.getElementById("myForm").reset();
-                    alert('Your Data Entry Success :)')
+                    alert('We have taken your suggestion into consideration.')
                 },
                 error: function () {
-                    alert("There was an error :(")
+                    alert("There was an error. Please try once again.:(")
                 }
             });
         }
