--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <!-- These are for inserting cards that are taken from bootstrap and inserting apprprimate images and text  -->
-    <div class="container" id="Gohere" style="display:flex;" data-aos="fade-down">
+    <div class="container" id="Gohere" style="display:flex;">
       <div class="card m-2" style="width: 18rem;font-family:'Baloo Bhai 2', cursive;">
         <img class="pjp" src="attachments/ff.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -170,7 +170,8 @@
         </div>
     </div>
 </div>
+</body>
 <script src=" javascript/index.js">
 </script>
-</body>
+
 </html>
