--- a/Note.html
+++ b/Note.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
   <title>Notes</title>
   <link rel="shortcut icon" href="icon16.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,6 +13,9 @@
   <link rel="html" href="index.html">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
+  <link rel="manifest" href="app.webmanifest">
+  <link rel="apple-touch-icon" href="icon100.png">
+  <script src="sw-register.js"></script>
 </head>
 
 <body>
@@ -68,8 +71,8 @@
       </div>
       <!-- From here we gonna display the notes we added there -->
     </div>
-    <h2>Your Notes</h2>
     <hr>
+    <h2>Your Notes</h2>
     <!-- This is an empty div in which we create those added texts and insert them into this using add note button and javascript we done in Note.js -->
     <div id="notes" class="container-fluid row">
     </div>
