--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
   <title>InstantNotes</title>
   <link rel="shortcut icon" href="icon16.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
+  <link rel="manifest" href="app.webmanifest">
+  <link rel="apple-touch-icon" href="icon100.png">
+  <script src="sw-register.js"></script>
 </head>
 
 <body>
@@ -171,7 +174,7 @@
     </div>
 </div>
 </body>
-<script src=" javascript/index.js">
+<script src="javascript/index.js">
 </script>
 
 </html>
