--- a/Suggest.html
+++ b/Suggest.html
@@ -40,7 +40,7 @@
                 style="font-family: 'Baloo Bhai 2', cursive;">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html"><span class="H">Home</span></a>
+                        <a class="nav-link active" aria-current="page" href="/"><span class="H">Home</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="about.html"><span class="H">Our
